force-app/main/default/objects/Email_File_Upload_Settings__c/Email_File_Upload_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for Custom Email File Uploads.</description>
    <label>Email File Upload Settings</label>
</CustomObject>