force-app/main/default/objects/Email_File_Upload_Settings__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this setting active?</description>
    <inlineHelpText>Is this setting active?</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>