force-app/main/default/objects/Email_File_Upload_Settings__c/fields/Allow_Multiple_Matches__c.field-meta.xml
<CustomField>
    <fullName>Allow_Multiple_Matches__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, an object will be created for each duplicate matching Id. For example, if checked and two accounts have the same query field value, then each account will have a duplicate record created. If this is left unchecked, no records will be created for any duplicate matches.</description>
    <inlineHelpText>If checked, an object will be created for each duplicate matching Id. For example, if checked and two accounts have the same query field value, then each account will have a duplicate record created. If this is left unchecked, no records will be created f</inlineHelpText>
    <label>Allow Multiple Matches?</label>
    <type>Checkbox</type>
</CustomField>