force-app/main/default/objects/Email_File_Upload_Settings__c/fields/ID_Key__c.field-meta.xml
<CustomField>
    <fullName>ID_Key__c</fullName>
    <description>Key that must be in the body of the email to allow uploads.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Key that must be in the body of the email to allow uploads.</inlineHelpText>
    <label>ID Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>