force-app/main/default/objects/Email_File_Upload_Settings__c/fields/MaxFileSize__c.field-meta.xml
<CustomField>
    <fullName>MaxFileSize__c</fullName>
    <inlineHelpText>The maximum number of characters in a file to process at once.</inlineHelpText>
    <label>Max File Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>