force-app/main/default/objects/Email_File_Upload_Settings__c/fields/MaxRecsPerBatch__c.field-meta.xml
<CustomField>
    <fullName>MaxRecsPerBatch__c</fullName>
    <inlineHelpText>The maximum number of records to process in a file in a single batch.</inlineHelpText>
    <label>Max Recs Per Batch</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>