force-app/main/default/objects/Email_File_Upload_Settings__c/fields/NbrAttempts__c.field-meta.xml
<CustomField>
    <fullName>NbrAttempts__c</fullName>
    <description>How many retries?</description>
    <inlineHelpText>How many retries?</inlineHelpText>
    <label>Nbr Attempts</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>