force-app/main/default/objects/Email_File_Upload_Settings__c/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <description>What is the email address you want a completion email sent to?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the email address you want a completion email sent to?</inlineHelpText>
    <label>Notification Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>