force-app/main/default/objects/Email_File_Upload_Settings__c/fields/Query_Field_1_Type__c.field-meta.xml
<CustomField>
    <fullName>Query_Field_1_Type__c</fullName>
    <description>What is the data type of the field that you are querying against? String, Decimal, or Integer?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the data type of the field that you are querying against? String, Decimal, or Integer?</inlineHelpText>
    <label>Query Field 1 Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>