force-app/main/default/objects/Email_File_Upload_Settings__c/fields/Query_Return_Field__c.field-meta.xml
<CustomField>
    <fullName>Query_Return_Field__c</fullName>
    <description>What is the api name of the field you want returned? This will most often be Id.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the api name of the field you want returned? This will most often be Id.</inlineHelpText>
    <label>Query Return Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>