force-app/main/default/objects/Email_File_Upload_Settings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>ID_Key__c</columns>
    <columns>Object_Type__c</columns>
    <columns>Notification_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>